@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/Text-German-0.03.ebuild,v 1.4 2005/08/05 16:26:43 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/Text-German-0.03.ebuild,v 1.5 2006/08/06 00:23:28 mcummings Exp $
 
 inherit perl-module
 
@@ -14,3 +14,7 @@ KEYWORDS="~ppc sparc x86"
 IUSE=""
 
 SRC_TEST="do"
+
+
+DEPEND="dev-lang/perl"
+RDEPEND="${DEPEND}"
