@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Text-German
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.9 2006/07/10 22:26:55 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.10 2006/08/06 00:23:28 mcummings Exp $
+
+  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Text-German-0.03.ebuild, Text-German-0.06.ebuild:
+  Adding perl dep; fixed header; fixed DEPEND
 
   10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Text-German-0.06.ebuild:
   Mark 0.06 stable on ia64
