@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Text-CSV_XS
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.4 2005/10/02 13:19:32 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.5 2006/08/06 00:19:55 mcummings Exp $
+
+  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Text-CSV_XS-0.23-r1.ebuild:
+  Adding perl dep; fixed header; fixed DEPEND
 
   02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
   Text-CSV_XS-0.23-r1.ebuild:
